Update issue 21 Improve the quality deleting the findbugs warnings.